--- a/css/estilos.css
+++ b/css/estilos.css
@@ -36,7 +36,9 @@ body {
 .boton:hover {color:white;box-shadow:inset 0 0 20px #346c9c, 0 0 20px #346c9c;transition:all 0.2s ease;}
 .pegado {margin:0px auto; top:0px; position:fixed; z-index:90;}
 .debuxoUL {list-style-position: inside;list-style-image: url("../images/ul.png");}
-
+.debuxoUL2 {list-style-position: inside;list-style-image: url("../images/ul2.png");}
+.tamanoIconos {height:auto; width:10em;}
+.tamanoVideo {height:auto; width:35em;}
 
 
 
