--- a/css/estilos.css
+++ b/css/estilos.css
@@ -41,5 +41,11 @@ body {
 .tamanoVideo {height:auto; width:35em;}
 
 
+/*Formulario*/
+.campos {border:1px solid black;padding:1.5em;margin:2em;}
+.campos textarea {width:100%;height:10em;}
+.campos button {margin:1em;padding:.2em;}
+.campos img{margin:.2em;width:24px;height:auto;}
+
 
 
